--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/style.css">    
+    <link rel="stylesheet" href="./css/style.css"> 
+    <link rel="stylesheet" href="./css/main.css">   
 </head>
 <!-- Next page -->
     <!-- Header -->
@@ -261,9 +262,22 @@
                             </svg>
                             </a>
                         </li>
-        
                     </Ul>
                 </div>
+                <form action="#" class="subscribe-form">
+                    <div class="subscribe">
+                    <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+                    <div class="subscribe-text">
+                        <input type="subscribe" name="subscribe" class="subscribe-input" placeholder="E-mail">
+                            
+                        <button type="submit" class="btn subscribe-btn" >Подписаться
+                            <svg class="subscribe-icon" width="24" height="24">
+                                <use href="./images/sprite.svg#icon-subscribe"></use>
+                            </svg>
+                        </button>
+                    </div>
+                    </div>
+                </form>
         </div>
     </footer>
 </body>
